cabal-version:       2.4

name:                hearts

version:             0.1.0.0

author:              Mike Sperber
maintainer:          michael.sperber@active-group.de

library
  exposed-modules: Cards, Game, Sync, EventSourcing, Player
  other-modules: Teletype, Concurrency, Shuffle, MVar, PolysemyUtil, Zipper
  
  build-depends:       base
                     , cond
                     , containers
                     , free
                     , mtl
                     , random
                     , transformers
                     , polysemy, polysemy-plugin

  hs-source-dirs:      src

  default-language:    Haskell2010


executable server

  main-is:             Main.hs

  other-modules: Args, Serialization, PlayerServer, TableServer

  build-depends:       base
                     , aeson
                     , hearts
                     , mtl
                     , optparse-applicative
                     , servant
                     , servant-server
                     , servant-options
                     , wai
                     , wai-cors
                     , warp
                     , containers
                     , polysemy, polysemy-plugin

  hs-source-dirs:      app

  default-language:    Haskell2010
